Throw exceptions across users in get_instance. Rename mount workers to get_instance workers.

--- a/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
+++ b/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
@@ -34,7 +34,7 @@
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.messages import FlowMessage\n",
     "from aiflows.utils import coflows_utils, colink_utils\n",
-    "from aiflows.workers import run_dispatch_worker_thread, run_mount_worker_thread\n",
+    "from aiflows.workers import run_dispatch_worker_thread, run_get_instance_worker_thread\n",
     "\n",
     "def status(cl):\n",
     "    colink_utils.print_served_flows(cl, print_values=False)\n",
@@ -80,16 +80,16 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "Mount worker started in attached thread for user  0392babafe816fc3f09483292e09359cffea9e7a08236469a33d7a759640e9b254\n",
+      "get_instances worker started in attached thread for user  02c5f78f4d27fa03c1c19b113a95ec847d17613b8ffb07d2876542df3120b793b2\n",
       "\n",
-      "~~~ Mount Receiver Task ~~~\n",
-      "Mounted d5117c38-7fc2-4551-b754-6316cff9279c at flows:reverse_number_atomic:mounts:03ee4d7636622d2de06b7f1ecb2f6abc46357c0de279a33c90bf6d0f1c6f000c1f:d5117c38-7fc2-4551-b754-6316cff9279c\n",
-      "Fetched singleton d5117c38-7fc2-4551-b754-6316cff9279c\n",
+      "~~~ serving get_instances request ~~~\n",
+      "Mounted 9a2c5b08-857f-4e43-b2c0-3b95cba41336 at flows:reverse_number_atomic:mounts:0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409:9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
+      "Fetched singleton 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_atomic\n",
-      "flow_id: d5117c38-7fc2-4551-b754-6316cff9279c\n",
-      "message_paths: ['push_tasks:6baaff05-4cee-4d0d-9aa7-da417412179c:msg']\n",
+      "flow_id: 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
+      "message_paths: ['push_tasks:c0e9825f-f99a-495b-a52d-5d2542a7b4be:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
@@ -97,8 +97,8 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_atomic\n",
-      "flow_id: d5117c38-7fc2-4551-b754-6316cff9279c\n",
-      "message_paths: ['push_tasks:e81b34ea-a7b2-48fd-910d-23b23b405db4:msg']\n",
+      "flow_id: 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
+      "message_paths: ['push_tasks:d40025d4-9592-4884-9813-9a3166c0f34b:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
@@ -108,7 +108,7 @@
    ],
    "source": [
     "run_dispatch_worker_thread(cls[0])\n",
-    "run_mount_worker_thread(cls[0])"
+    "run_get_instance_worker_thread(cls[0])"
    ]
   },
   {
@@ -167,18 +167,26 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "Mount worker started in attached thread for user  03ee4d7636622d2de06b7f1ecb2f6abc46357c0de279a33c90bf6d0f1c6f000c1f\n",
+      "get_instances worker started in attached thread for user  0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409\n",
       "\n",
-      "~~~ Mount Initiator Task ~~~\n",
-      "Received subflow ids: {\n",
-      "    \"first_reverse_flow\": \"d5117c38-7fc2-4551-b754-6316cff9279c\",\n",
-      "    \"second_reverse_flow\": \"d5117c38-7fc2-4551-b754-6316cff9279c\"\n",
+      "~~~ get_instances initiator ~~~\n",
+      "Received subflow instances: {\n",
+      "    \"first_reverse_flow\": {\n",
+      "        \"flow_id\": \"9a2c5b08-857f-4e43-b2c0-3b95cba41336\",\n",
+      "        \"successful\": true,\n",
+      "        \"message\": \"Fetched local flow instance.\"\n",
+      "    },\n",
+      "    \"second_reverse_flow\": {\n",
+      "        \"flow_id\": \"9a2c5b08-857f-4e43-b2c0-3b95cba41336\",\n",
+      "        \"successful\": true,\n",
+      "        \"message\": \"Fetched local flow instance.\"\n",
+      "    }\n",
       "}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb\n",
-      "message_paths: ['push_tasks:5928c193-e82e-4484-9144-61407c874683:msg']\n",
+      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
+      "message_paths: ['push_tasks:7dc92d0e-184e-471e-8521-e66e81193d48:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
@@ -186,27 +194,27 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb\n",
-      "message_paths: ['push_tasks:5200fc0d-5620-45e2-9208-455366ea8b0a:msg']\n",
+      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
+      "message_paths: ['push_tasks:3494a953-5271-4d43-8603-f50bde27816d:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='9e0fdfb0-1166-4d0e-ba48-bd02d24250a1', created_at='2024-03-16 09:01:56.429901718', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
+      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='987a59a7-03af-4787-9c4e-dc3d9a57d780', created_at='2024-03-16 11:04:50.062076959', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: reverse_number_sequential\n",
-      "flow_id: e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb\n",
-      "message_paths: ['push_tasks:e751e792-98ab-4fd1-8b22-e7b998ef6980:msg']\n",
+      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
+      "message_paths: ['push_tasks:797977c0-2c38-45bf-aafe-deed954ca9f5:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='9e0fdfb0-1166-4d0e-ba48-bd02d24250a1', created_at='2024-03-16 09:01:56.429901718', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
+      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='987a59a7-03af-4787-9c4e-dc3d9a57d780', created_at='2024-03-16 11:04:50.062076959', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
      ]
     }
    ],
    "source": [
     "run_dispatch_worker_thread(cls[1])\n",
-    "run_mount_worker_thread(cls[1])"
+    "run_get_instance_worker_thread(cls[1])"
    ]
   },
   {
@@ -254,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb at flows:reverse_number_sequential:mounts:local:e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb\n"
+      "Mounted 57c8335e-ae28-48dc-ad51-b4786aabd8ba at flows:reverse_number_sequential:mounts:local:57c8335e-ae28-48dc-ad51-b4786aabd8ba\n"
      ]
     }
    ],
@@ -332,20 +340,20 @@
      "output_type": "stream",
      "text": [
       " reverse_number_atomic/\n",
+      "   default_dispatch_point\n",
+      "   parallel_dispatch\n",
       "   flow_class_name\n",
-      "   init\n",
       "   mounts/\n",
-      "     03ee4d7636622d2de06b7f1ecb2f6abc46357c0de279a33c90bf6d0f1c6f000c1f/\n",
-      "       d5117c38-7fc2-4551-b754-6316cff9279c/\n",
+      "     0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409/\n",
+      "       9a2c5b08-857f-4e43-b2c0-3b95cba41336/\n",
+      "         init\n",
       "         config_overrides\n",
       "         state\n",
-      "         init\n",
+      "   init\n",
       "   singleton\n",
-      "   parallel_dispatch\n",
-      "   default_dispatch_point\n",
       "\n",
       "All flow instances:\n",
-      " d5117c38-7fc2-4551-b754-6316cff9279c\n"
+      " 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n"
      ]
     }
    ],
@@ -364,20 +372,20 @@
      "output_type": "stream",
      "text": [
       " reverse_number_sequential/\n",
-      "   singleton\n",
       "   flow_class_name\n",
-      "   default_dispatch_point\n",
       "   init\n",
       "   parallel_dispatch\n",
       "   mounts/\n",
       "     local/\n",
-      "       e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb/\n",
-      "         state\n",
-      "         init\n",
+      "       57c8335e-ae28-48dc-ad51-b4786aabd8ba/\n",
       "         config_overrides\n",
+      "         init\n",
+      "         state\n",
+      "   singleton\n",
+      "   default_dispatch_point\n",
       "\n",
       "All flow instances:\n",
-      " e1a75fe3-4c0f-4233-bbef-1a2c0ed7b7eb\n"
+      " 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n"
      ]
     }
    ],
