Match the new scheduler update. Added parallel_dispatch and push workers can handle remote-storage.

--- a/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
+++ b/examples/mauro_examples/ReverseNumber - multi user/ReverseNumber-multiuser.ipynb
@@ -80,25 +80,25 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "get_instances worker started in attached thread for user  02c5f78f4d27fa03c1c19b113a95ec847d17613b8ffb07d2876542df3120b793b2\n",
+      "get_instances worker started in attached thread for user  0254bae5a8eeeb19e9e1b7c32923414b9239233f55e532c86dd60ab4d86caa7d3e\n",
       "\n",
       "~~~ serving get_instances request ~~~\n",
-      "Mounted 9a2c5b08-857f-4e43-b2c0-3b95cba41336 at flows:reverse_number_atomic:mounts:0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409:9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
-      "Fetched singleton 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
+      "Mounted ce236407-96b9-49cd-87e7-5106c241c40e at flows:reverse_number_atomic:mounts:03eaee4772a9ec3d137ac814d061e9234c61f08fe0d0f1b40868467fb5146956a9:ce236407-96b9-49cd-87e7-5106c241c40e\n",
+      "Fetched singleton ce236407-96b9-49cd-87e7-5106c241c40e\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
-      "flow_type: reverse_number_atomic\n",
-      "flow_id: 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
-      "message_paths: ['push_tasks:c0e9825f-f99a-495b-a52d-5d2542a7b4be:msg']\n",
+      "flow_endpoint: reverse_number_atomic\n",
+      "flow_id: ce236407-96b9-49cd-87e7-5106c241c40e\n",
+      "message_paths: ['push_tasks:b7f60bc8-c51c-4ce5-9615-9f4c5ff9163b:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
       " state {}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
-      "flow_type: reverse_number_atomic\n",
-      "flow_id: 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n",
-      "message_paths: ['push_tasks:d40025d4-9592-4884-9813-9a3166c0f34b:msg']\n",
+      "flow_endpoint: reverse_number_atomic\n",
+      "flow_id: ce236407-96b9-49cd-87e7-5106c241c40e\n",
+      "message_paths: ['push_tasks:19830c86-0f6d-40b4-a0df-f17d879986ab:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberAtomic \n",
@@ -167,48 +167,48 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "get_instances worker started in attached thread for user  0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409\n",
+      "get_instances worker started in attached thread for user  03eaee4772a9ec3d137ac814d061e9234c61f08fe0d0f1b40868467fb5146956a9\n",
       "\n",
       "~~~ get_instances initiator ~~~\n",
       "Received subflow instances: {\n",
       "    \"first_reverse_flow\": {\n",
-      "        \"flow_id\": \"9a2c5b08-857f-4e43-b2c0-3b95cba41336\",\n",
+      "        \"flow_id\": \"ce236407-96b9-49cd-87e7-5106c241c40e\",\n",
       "        \"successful\": true,\n",
       "        \"message\": \"Fetched local flow instance.\"\n",
       "    },\n",
       "    \"second_reverse_flow\": {\n",
-      "        \"flow_id\": \"9a2c5b08-857f-4e43-b2c0-3b95cba41336\",\n",
+      "        \"flow_id\": \"ce236407-96b9-49cd-87e7-5106c241c40e\",\n",
       "        \"successful\": true,\n",
       "        \"message\": \"Fetched local flow instance.\"\n",
       "    }\n",
       "}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
-      "flow_type: reverse_number_sequential\n",
-      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
-      "message_paths: ['push_tasks:7dc92d0e-184e-471e-8521-e66e81193d48:msg']\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 1b7d9373-b257-4e88-b080-89c55111dcfc\n",
+      "message_paths: ['push_tasks:f2011e59-8833-4608-bff8-ec707eb4cd98:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
       " state {'current_call': 'first_reverse_flow'}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
-      "flow_type: reverse_number_sequential\n",
-      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
-      "message_paths: ['push_tasks:3494a953-5271-4d43-8603-f50bde27816d:msg']\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 1b7d9373-b257-4e88-b080-89c55111dcfc\n",
+      "message_paths: ['push_tasks:e863ef04-d312-4c15-8c1a-2cea13f112c9:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='987a59a7-03af-4787-9c4e-dc3d9a57d780', created_at='2024-03-16 11:04:50.062076959', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
+      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='809d66f6-4a72-4a96-82b3-3d722856b9d8', created_at='2024-03-16 23:46:06.159770926', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
-      "flow_type: reverse_number_sequential\n",
-      "flow_id: 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n",
-      "message_paths: ['push_tasks:797977c0-2c38-45bf-aafe-deed954ca9f5:msg']\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 1b7d9373-b257-4e88-b080-89c55111dcfc\n",
+      "message_paths: ['push_tasks:adeff097-c51a-432f-83a4-cb541f02dadb:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
       "Called ReverseNumberSequential \n",
-      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='987a59a7-03af-4787-9c4e-dc3d9a57d780', created_at='2024-03-16 11:04:50.062076959', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
+      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='809d66f6-4a72-4a96-82b3-3d722856b9d8', created_at='2024-03-16 23:46:06.159770926', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted 57c8335e-ae28-48dc-ad51-b4786aabd8ba at flows:reverse_number_sequential:mounts:local:57c8335e-ae28-48dc-ad51-b4786aabd8ba\n"
+      "Mounted 1b7d9373-b257-4e88-b080-89c55111dcfc at flows:reverse_number_sequential:mounts:local:1b7d9373-b257-4e88-b080-89c55111dcfc\n"
      ]
     }
    ],
@@ -340,20 +340,20 @@
      "output_type": "stream",
      "text": [
       " reverse_number_atomic/\n",
-      "   default_dispatch_point\n",
-      "   parallel_dispatch\n",
-      "   flow_class_name\n",
       "   mounts/\n",
-      "     0300dd5667bb8eb8b25849121c3cb8eba6818d539a0294c59586921a4b612a9409/\n",
-      "       9a2c5b08-857f-4e43-b2c0-3b95cba41336/\n",
+      "     03eaee4772a9ec3d137ac814d061e9234c61f08fe0d0f1b40868467fb5146956a9/\n",
+      "       ce236407-96b9-49cd-87e7-5106c241c40e/\n",
+      "         state\n",
       "         init\n",
       "         config_overrides\n",
-      "         state\n",
+      "   default_dispatch_point\n",
+      "   parallel_dispatch\n",
       "   init\n",
       "   singleton\n",
+      "   flow_class_name\n",
       "\n",
       "All flow instances:\n",
-      " 9a2c5b08-857f-4e43-b2c0-3b95cba41336\n"
+      " ce236407-96b9-49cd-87e7-5106c241c40e\n"
      ]
     }
    ],
@@ -372,20 +372,20 @@
      "output_type": "stream",
      "text": [
       " reverse_number_sequential/\n",
-      "   flow_class_name\n",
-      "   init\n",
-      "   parallel_dispatch\n",
       "   mounts/\n",
       "     local/\n",
-      "       57c8335e-ae28-48dc-ad51-b4786aabd8ba/\n",
-      "         config_overrides\n",
+      "       1b7d9373-b257-4e88-b080-89c55111dcfc/\n",
       "         init\n",
       "         state\n",
-      "   singleton\n",
+      "         config_overrides\n",
+      "   parallel_dispatch\n",
+      "   flow_class_name\n",
       "   default_dispatch_point\n",
+      "   singleton\n",
+      "   init\n",
       "\n",
       "All flow instances:\n",
-      " 57c8335e-ae28-48dc-ad51-b4786aabd8ba\n"
+      " 1b7d9373-b257-4e88-b080-89c55111dcfc\n"
      ]
     }
    ],
