--- a/examples/mauro_examples/ChatFlow-languages.ipynb
+++ b/examples/mauro_examples/ChatFlow-languages.ipynb
@@ -29,9 +29,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-17 03:49:00,946\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules...\u001b[0m\n",
-      "[\u001b[36m2024-03-17 03:49:01,095\u001b[0m][\u001b[34maiflows.flow_verse.loading:608\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:coflows already synced, skip\u001b[0m\n",
-      "[\u001b[36m2024-03-17 03:49:01,097\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
+      "[\u001b[36m2024-03-17 07:25:50,403\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules...\u001b[0m\n",
+      "[\u001b[36m2024-03-17 07:25:50,544\u001b[0m][\u001b[34maiflows.flow_verse.loading:608\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:coflows already synced, skip\u001b[0m\n",
+      "[\u001b[36m2024-03-17 07:25:50,545\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
       "\n",
       "\u001b[0m\n"
      ]
@@ -106,82 +106,21 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_endpoint: Chatbot\n",
-      "flow_id: 469b3425-87d6-4a58-9ae6-96ee6f7b299a\n",
-      "message_paths: ['push_tasks:1cb5ce64-354a-4bfb-a3fc-0bbee5c09349:msg']\n",
+      "flow_id: d5df4e44-7f15-47f3-aa0a-4c4ac999d375\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:7e5080fe-857e-4fa6-ae76-3ccf733c992c:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
+      "Input message source: Proxy_Chatbot\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_endpoint: Chatbot\n",
-      "flow_id: 469b3425-87d6-4a58-9ae6-96ee6f7b299a\n",
-      "message_paths: ['push_tasks:78046133-4082-4f06-bf4e-2c0a74bc69bd:msg']\n",
+      "flow_id: ad5feb52-5c2b-411c-9202-257a3b98d438\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:085b2bf6-009c-4e83-9b7b-45d69f936c49:msg']\n",
       "parallel_dispatch: False\n",
       "\n",
-      "[\u001b[36m2024-03-17 03:49:09,380\u001b[0m][\u001b[34maiflows.utils.general_helpers:387\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[1m\u001b[31m \n",
-      "\n",
-      "For feedback or to get help:  \u001b[0m\u001b[1m\u001b[32mhttps://github.com/epfl-dlab/aiflows/issues \n",
-      "\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-17 03:49:09,382\u001b[0m][\u001b[34maiflows.utils.general_helpers:397\u001b[0m][\u001b[31mERROR\u001b[0m] - 'query'\u001b[0m\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/utils/general_helpers.py\", line 406, in wrapper\n",
-      "    return f(*args, **kw)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/base_flows/abstract.py\", line 535, in __call__\n",
-      "    self._run_method(input_message)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/base_flows/abstract.py\", line 520, in _run_method\n",
-      "    self.run(input_message)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 394, in run\n",
-      "    response = self.query_llm(input_data=input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 372, in query_llm\n",
-      "    self._process_input(input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 347, in _process_input\n",
-      "    user_message_content = self._get_message(self.human_message_prompt_template, input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 219, in _get_message\n",
-      "    template_kwargs[input_variable] = input_data[input_variable]\n",
-      "KeyError: 'query'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-5 (run):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/staverm/.pyenv/versions/3.10.6/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/staverm/.pyenv/versions/3.10.6/lib/python3.10/site-packages/ipykernel/ipkernel.py\", line 761, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "  File \"/home/staverm/.pyenv/versions/3.10.6/lib/python3.10/threading.py\", line 953, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/colink-sdk-python-dev/colink/protocol.py\", line 128, in run\n",
-      "    raise err\n",
-      "  File \"/home/staverm/workspace/coflows-dev/colink-sdk-python-dev/colink/protocol.py\", line 20, in thread_func\n",
-      "    cl_app.start()\n",
-      "  File \"/home/staverm/workspace/coflows-dev/colink-sdk-python-dev/colink/protocol.py\", line 220, in start\n",
-      "    raise e\n",
-      "  File \"/home/staverm/workspace/coflows-dev/colink-sdk-python-dev/colink/protocol.py\", line 213, in start\n",
-      "    self.user_func(cl, task.protocol_param, task.participants)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/workers/dispatch_worker.py\", line 164, in dispatch_task_handler\n",
-      "    flow(input_msg)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/utils/general_helpers.py\", line 408, in wrapper\n",
-      "    exception_handler(e)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/utils/general_helpers.py\", line 398, in exception_handler\n",
-      "    raise e\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/utils/general_helpers.py\", line 406, in wrapper\n",
-      "    return f(*args, **kw)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/base_flows/abstract.py\", line 535, in __call__\n",
-      "    self._run_method(input_message)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/aiflows/base_flows/abstract.py\", line 520, in _run_method\n",
-      "    self.run(input_message)  \n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 394, in run\n",
-      "    response = self.query_llm(input_data=input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 372, in query_llm\n",
-      "    self._process_input(input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 347, in _process_input\n",
-      "    user_message_content = self._get_message(self.human_message_prompt_template, input_data)\n",
-      "  File \"/home/staverm/workspace/coflows-dev/aiflows/examples/mauro_examples/ChatFlow-languages/flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.py\", line 219, in _get_message\n",
-      "    template_kwargs[input_variable] = input_data[input_variable]\n",
-      "KeyError: 'query'\n"
+      "Input message source: Proxy_Chatbot\n"
      ]
     }
    ],
@@ -204,10 +143,21 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_endpoint: Chatbot\n",
-      "flow_id: 469b3425-87d6-4a58-9ae6-96ee6f7b299a\n",
-      "message_paths: ['push_tasks:8c80b814-7368-4f07-8a2b-d5b4a897f92b:msg']\n",
+      "flow_id: d5df4e44-7f15-47f3-aa0a-4c4ac999d375\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:40c9884c-89dd-471b-96e1-dd393bccfc37:msg']\n",
       "parallel_dispatch: False\n",
-      "\n"
+      "\n",
+      "Input message source: Proxy_Chatbot\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: Chatbot\n",
+      "flow_id: ad5feb52-5c2b-411c-9202-257a3b98d438\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:07e477b0-f653-476a-807c-dadb29575554:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: Proxy_Chatbot\n"
      ]
     }
    ],
@@ -238,7 +188,7 @@
       "Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:Chatbot.\n",
       "dispatch_point: coflows_dispatch\n",
       "parallel_dispatch: False\n",
-      "singleton: True\n"
+      "singleton: False\n"
      ]
     },
     {
@@ -290,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted 469b3425-87d6-4a58-9ae6-96ee6f7b299a at flows:Chatbot:mounts:local:469b3425-87d6-4a58-9ae6-96ee6f7b299a\n"
+      "Mounted d5df4e44-7f15-47f3-aa0a-4c4ac999d375 at flows:Chatbot:mounts:local:d5df4e44-7f15-47f3-aa0a-4c4ac999d375\n"
      ]
     }
    ],
@@ -316,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetched singleton 469b3425-87d6-4a58-9ae6-96ee6f7b299a\n"
+      "Mounted ad5feb52-5c2b-411c-9202-257a3b98d438 at flows:Chatbot:mounts:local:ad5feb52-5c2b-411c-9202-257a3b98d438\n"
      ]
     }
    ],
@@ -382,10 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "baa4a9b8-a47b-4fee-8bce-3b4ed404ca9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'api_output': 'Glavni grad Švicarske je Bern.'}\n",
+      "{'api_output': 'Bern se nalazi u središnjem dijelu Švicarske, na rijeci Aare.'}\n"
+     ]
+    }
+   ],
    "source": [
     "input_message = FlowMessage(\n",
     "    data={\"id\": 0, \"question\": \"What is the capital of Switzerland?\"},\n",
